--- a/fragments/pom.xml
+++ b/fragments/pom.xml
@@ -11,7 +11,8 @@
 	<groupId>com.codegate01</groupId>
 	<artifactId>fragments</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>fragments</name>
+	<packaging>war</packaging>
+	<name>fragment</name>
 	<description>Fragments- Project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
@@ -26,6 +27,11 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
