--- a/fragments/pom.xml
+++ b/fragments/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>fragments</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>fragment</name>
+	<name>fragments</name>
 	<description>Fragments- Project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
